# task-rust

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20230917201507_task.sql  20231206115516_task.sql  20231206115548_user.sql  create_table_task.sql  create_table_user.sql
src/: controllers.rs  errors.rs  main.rs  utils.rs
src/controllers/: auth.rs  task.rs
src/models/: auth.rs  task.rs
