[package]
name = "sqlx-project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqlx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.13", features = ["headers"]}
axum-macros = "0.3.8"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.137"
tracing = "0.1"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "json", "postgres", "offline", "uuid", "chrono"] }
sqlx-core = "0.5"
sqlx-macros = "0.7"
sqlx-postgres = "0.7"
anyhow = "1.0.58"
serde_json = "1.0.57"
tower-http = { version = "0.3.4", features = ["trace"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }